# agents-example

./: .gitignore  README.md  ai-math.ipynb  astroid-study.ipynb  diabetic.ipynb  fine_tuning.ipynb  gemma_rag.py  kaggle_rag.ipynb  langchain-react.py  langchain-search.py  loan-payback.ipynb  main.py  pyproject.toml  rag_optimize.ipynb
db/faiss_doctor_index/: index.faiss  index.pkl
