[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "black>=25.12.0",
    "datasets<4.0.0",
    "dspy-ai>=3.0.4",
    "evaluate>=0.4.0",
    "faiss-cpu>=1.13.0",
    "ipykernel>=7.0.0",
    "isort>=7.0.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=1.1.0",
    "langchain-tavily>=0.2.15",
    "langchainhub>=0.1.0",
    "langchain-huggingface>=1.2.0",
    "langsmith>=0.1.0",
    "peft>=0.18.0",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "transformers>=4.57.3",
    "weaviate-client>=4.19.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.6.0",
    "lime>=0.2.0",
    "plotly>=6.5.0",
    "wandb>=0.23.0",
]
